--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "aws-sdk": "^2.1395.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "fs": "^0.0.1-security",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "speaker": "^0.5.4",
+    "stream": "^0.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
