some stuff added

--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "@aws-sdk/client-transcribe-streaming": "^3.350.0",
+    "@aws-sdk/eventstream-codec": "^3.347.0",
+    "@aws-sdk/eventstream-marshaller": "^3.120.0",
+    "@aws-sdk/util-utf8-node": "^3.259.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "aws-crt": "^1.15.18",
     "aws-sdk": "^2.1395.0",
+    "crypto-js": "^4.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "fs": "^0.0.1-security",
     "get-user-media-promise": "^1.1.4",
     "microphone-stream": "^6.0.1",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
