--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-transcribe-streaming": "^3.350.0",
+    "@aws-sdk/credential-provider-node": "^3.350.0",
+    "@aws-sdk/credential-providers": "^3.350.0",
     "@aws-sdk/eventstream-codec": "^3.347.0",
     "@aws-sdk/eventstream-marshaller": "^3.120.0",
+    "@aws-sdk/types": "^3.347.0",
     "@aws-sdk/util-utf8-node": "^3.259.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
